# amr_floor_cleaner

./: CMakeLists.txt  package.xml
config/: ekf_localization.yaml  ekf_mapping.yaml  nav2_params.yaml  slam_toolbox_config.yaml
launch/: calibrate_motion_launch.py  csi_camera_launch.py  homebot_launch.py  laser_avoidance_launch.py  lidar_launch.py  nav2_launch.py  slam_toolbox_launch.py
maps/: my_map.pgm  my_map.yaml
scripts/: automate_map_save.py  calibrate_motion.py  laser_avoidance.py
src/: homebot.cpp
